--- a/style.css
+++ b/style.css
@@ -860,11 +860,15 @@ body {
 }
 
 .team-banner-img {
-  width: 100%;
+  width: 80%;
   height: 100%;
   object-fit: cover;
   filter: grayscale(100%) contrast(1.2);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 .banner-overlay {
   position: absolute;
